--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Masters in Business Analytics  
+  uni: UIC
+  year: August, 2016 &mdash; May, 2018
   # awards:
-  # summary:
+  summary: This is a 2 year long masters program focusing on methods, principles in data handling and analytics
