--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 # Degree
 add-education
-- degree: Masters in Business Analytics  
+  degree: Masters in Business Analytics  
   uni: UIC
   year: August, 2016 &mdash; May, 2018
   # awards:
-  summary: This is a 2 year long masters program focusing on methods, principles in data handling and analytics
+  # summary: This is a 2 year long masters program focusing on methods, principles in data handling and analytics
