--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 add-education
-  degree: Masters in Business Analytics  
+- degree: Masters in Business Analytics  
   uni: UIC
   year: August, 2016 &mdash; May, 2018
   # awards:
