--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -4,7 +4,12 @@
 -- description: Animated cartoons involving restuarants and burgers
 -- description: Amusement parks
 -
-add-that-french-horn-branch
+-
+-- description: Open Source
+-- description: Empowering underrepresented groups in tech through education and free events.
+-- description: French Horn
+-
+-add-that-french-horn-branch
 +add-experience
 +- description: Electron, Atom, GraphQL, Webhooks, and most of all... Git
 +- description: Movies about a cappella singing 
