--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,8 +1,14 @@
 # Interests
+-
 -- description: Travel
 -- description: Animated cartoons involving restuarants and burgers
 -- description: Amusement parks
 -
+-- description: Open Source
+-- description: Empowering underrepresented groups in tech through education and free events.
+-- description: French Horn
+-
+-add-that-french-horn-branch
 +add-experience
 +- description: Electron, Atom, GraphQL, Webhooks, and most of all... Git
 +- description: Movies about a cappella singing 
