--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,10 +1,10 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: Atlants's ConnectHome
+- organization: Social Home
   role: Volunteer
   year: 2016 &mdash; Present
-  url: http://connecthome.atlantaga.gov/
+  url: http://connecthome.social.gov/
   summary: Developed and delivered a Git and GitHub training for secondary education students that created a resume that could use after finishing school.
 
 
