--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,7 +1,7 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: Social Home
+- organization: Social Home base camp
   role: Volunteer
   year: 2016 &mdash; Present
   url: http://connecthome.social.gov/
